--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@tanstack/react-query": "^5.85.3",
     "@web3modal/siwe": "^5.1.11",
     "@web3modal/wagmi": "^5.1.11",
+    "@xenova/transformers": "^2.17.2",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "ethers": "^6.15.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "openai": "^5.12.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
