--- a/package.json
+++ b/package.json
@@ -2,6 +2,19 @@
   "name": "ethjobs",
   "version": "0.1.0",
   "private": true,
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "homepage": "https://github.com/emilypmendez/ethjobs#readme",
+  "bugs": {
+    "url": "https://github.com/emilypmendez/ethjobs/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/emilypmendez/ethjobs.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
+  "main": "jest.config.js",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
